crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/duplicate_mutability_keyword/functions/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Only a single mutability keyword can be provided. Found `ViewKeyword` after `PureKeyword`.
   ╭─[input.sol:2:23]
   │
 2 │   function foo() pure view returns (uint) {
   │                       ──┬─  
   │                         ╰─── Error occurred here.
───╯
